# BigO-Lab

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260329_0001_backend_foundation.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/core/: cache.py  jwt.py  performance.py  rate_limit.py  runtime.py  settings.py
backend/app/db/: __init__.py  database.py
backend/app/execution/: runner.py  sandbox.py
backend/app/experiments/: aggregator.py  input_generator.py  orchestrator.py
backend/app/instrumentation/: injector.py  parser.py  tracker.py
backend/app/integrations/: __init__.py  ollama_cloud.py
backend/app/models/: __init__.py  code_snippet.py  complexity_estimate.py  experiment.py  experiment_run.py  function_metric.py  line_metric.py  project.py  user.py
backend/app/presets/: __init__.py  library.py
backend/app/schemas/: __init__.py  auth.py  code_snippet.py  common.py  comparison.py  complexity.py  execution.py  experiment.py  experiment_run.py  explanation.py  metrics.py  preset.py  project.py  share.py  user.py
backend/app/services/: __init__.py  auth_service.py  comparison_service.py  complexity_service.py  execution_service.py  experiment_service.py  (+8 more)
backend/docker/: Dockerfile  docker-compose.yml
backend/migrations/: env.py
backend/scripts/: bootstrap.sh  run_worker.sh
backend/tests/: helpers.py
(+66 files in other folders)
