[project]
name = "big-o-playground-backend"
version = "0.1.0"
description = "Backend foundation for the Big O Playground platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.10,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
    "dramatiq[redis]>=1.18,<2.0",
    "redis>=5.2,<6.0",
    "httpx>=0.27,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.14,<2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
